<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LaNoFraiAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_options">Acarque na opção desejada</string>
    <string name="main_cadele_frai_button">Cadê-le o Frai</string>
    <string name="main_blog_button">Blog</string>
    <string name="cadelefrai_titulo">Cadê-le o Frai</string>
    <string name="cadelefrai_headline">O Frai tá pra lá!</string>
    <string name="cadelefrai_lonjura">Numa lonjura de:</string>
    <string name="cadelefrai_vorta">Vorta</string>
    <string name="cadeleeu_started">Iniciado</string>
    <string name="cadeleeu_longitude">Longitude:</string>
    <string name="cadeleeu_latitude">Latitude:</string>
    <string name="cadeleeu_altitude">Altitude:</string>
    <string name="cadeleeu_elapsed_time">Tempo:</string>
    <string name="cadeleeu_start">Começar</string>
    <string name="cadeleeu_stop">Parar</string>
    <string name="cadeleeu_gps_enabled">GPS ligado</string>
    <string name="cadeleeu_gps_disabled">GPS desativado</string>
    <string name="cadeleeu_cell_text">Correndo há %1$s</string>
    <string name="cadeleeu_headline">Blog</string>

</resources>
