<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".LaNoFraiMainActivity">

    <ImageView
        android:id="@+id/menu_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_main"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/text_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:layout_below="@id/menu_logo"
        android:text="@string/main_menu_options" 
        android:textColor="#666666"/>

    <Button
        android:id="@+id/cadele_frai_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menu_logo"
        android:layout_alignRight="@+id/menu_logo"
        android:layout_below="@+id/text_main_menu"
        android:layout_marginTop="33dp"
        android:text="@string/main_cadele_frai_button" />

    <Button
        android:id="@+id/blog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menu_logo"
        android:layout_alignRight="@+id/menu_logo"
        android:layout_below="@+id/cadele_frai_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/main_blog_button" />
    
</RelativeLayout>